--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -118,6 +118,8 @@ jobs:
       ##### megadepth ------------------------------------------------------------      
       - name: download megadepth
         run: |
+          cd ~
+          pwd
           mkdir /home/rstudio/tools
           wget -P /home/rstudio/tools https://github.com/ChristopherWilks/megadepth/releases/download/1.0.3/megadepth.libcurl4
           mv /home/rstudio/tools/megadepth.libcurl4 /home/rstudio/tools/megadepth
