Add in initial downgrade of packages to 3.11

--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -185,6 +185,9 @@ jobs:
 
       - name: Install dependencies
         run: |
+          ## first, need to downgrade existing packages to 3.11
+          BiocManager::install(version = '3.11')
+          
           ## Try installing the package dependencies in steps. First the local
           ## dependencies, then any remaining dependencies to avoid the
           ## issues described at
