--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -186,7 +186,7 @@ jobs:
       - name: Install dependencies
         run: |
           ## first, need to downgrade existing packages to 3.11
-          BiocManager::install(version = '3.11')
+          BiocManager::install(version = '3.11', ask = FALSE)
           
           ## Try installing the package dependencies in steps. First the local
           ## dependencies, then any remaining dependencies to avoid the
