force re-install of all Bioconductor 3.12 packages
- Check if there is an outdated dependency of SummarizedExperiment causing issues at https://github.com/dzhang32/dasper/actions/runs/284294728

--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -185,6 +185,9 @@ jobs:
 
       - name: Install dependencies
         run: |
+          ## first, need to downgrade existing packages to 3.12
+          BiocManager::install(version = '3.12', ask = FALSE)
+          
           ## manually install packages from GitHub
           remotes::install_github("snystrom/cmdfun")
           remotes::install_github("LieberInstitute/megadepth")
