Add install of megadepth/cmdfun dependencies for Windows/Mac

--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -185,7 +185,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          ## first, need to downgrade existing packages to 3.12
           BiocManager::install(version = '3.12', ask = FALSE)
           
           ## manually install packages from GitHub
@@ -401,6 +400,12 @@ jobs:
 
       - name: Install dependencies
         run: |
+          BiocManager::install(version = '3.12', ask = FALSE)
+          
+          ## manually install packages from GitHub
+          remotes::install_github("snystrom/cmdfun")
+          remotes::install_github("LieberInstitute/megadepth")
+        
           ## Try installing the package dependencies in steps. First the local
           ## dependencies, then any remaining dependencies to avoid the
           ## issues described at
