--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -66,11 +66,11 @@ jobs:
 
       ## Set the R library to the directory matching the
       ## R packages cache step further below when running on Docker (Linux).
-      - name: Set R Library home on Linux
-        if: runner.os == 'Linux'
-        run: |
-          mkdir /__w/_temp/Library
-          echo ".libPaths('/__w/_temp/Library')" > ~/.Rprofile
+      #- name: Set R Library home on Linux
+        #if: runner.os == 'Linux'
+        #run: |
+          #mkdir /__w/_temp/Library
+          #echo ".libPaths('/__w/_temp/Library')" > ~/.Rprofile
       ## Most of these steps are the same as the ones in
       ## https://github.com/r-lib/actions/blob/master/examples/check-standard.yaml
       ## If they update their steps, we will also need to update ours.
@@ -96,20 +96,20 @@ jobs:
         shell: Rscript {0}
 
       - name: Cache R packages
-        if: "!contains(github.event.head_commit.message, '/nocache') && runner.os != 'Linux'"
+        if: "!contains(github.event.head_commit.message, '/nocache') 
         uses: actions/cache@v1
         with:
           path: ${{ env.R_LIBS_USER }}
           key: ${{ env.cache-version }}-${{ runner.os }}-biocversion-devel-r-4.0-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: ${{ env.cache-version }}-${{ runner.os }}-biocversion-devel-r-4.0-
 
-      - name: Cache R packages on Linux
-        if: "!contains(github.event.head_commit.message, '/nocache') && runner.os == 'Linux' "
-        uses: actions/cache@v1
-        with:
-          path: /home/runner/work/_temp/Library
-          key: ${{ env.cache-version }}-${{ runner.os }}-biocversion-devel-r-4.0-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ env.cache-version }}-${{ runner.os }}-biocversion-devel-r-4.0-
+      #- name: Cache R packages on Linux
+        #if: "!contains(github.event.head_commit.message, '/nocache') && runner.os == 'Linux' "
+        #uses: actions/cache@v1
+        #with:
+          #path: /home/runner/work/_temp/Library
+          #key: ${{ env.cache-version }}-${{ runner.os }}-biocversion-devel-r-4.0-${{ hashFiles('.github/depends.Rds') }}
+          #restore-keys: ${{ env.cache-version }}-${{ runner.os }}-biocversion-devel-r-4.0-
 
       #- name: Install Linux system dependencies
         #if: runner.os == 'Linux'
