--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -166,6 +166,9 @@ jobs:
           remotes::install_github("ropensci/bibtex")
           remotes::install_github("ropensci/RefManageR")
           remotes::install_github("cboettig/knitcitations")
+          
+          ## Temporarily install git megadepth from github
+          remotes::install_github("LieberInstitute/megadepth")
 
           ## Pass #1 at installing dependencies
           message(paste('****', Sys.time(), 'pass number 1 at installing dependencies: local dependencies ****'))
