--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -52,9 +52,9 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - { os: ubuntu-latest, r: '4.1', bioc: '3.13', cont: "bioconductor/bioconductor_docker:RELEASE_3_13", rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest" }
-          - { os: macOS-latest, r: '4.1', bioc: '3.13'}
-          - { os: windows-latest, r: '4.1', bioc: '3.13'}
+          - { os: ubuntu-latest, r: '4.1', bioc: '3.14', cont: "bioconductor/bioconductor_docker:devel", rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest" }
+          - { os: macOS-latest, r: '4.1', bioc: '3.14'}
+          - { os: windows-latest, r: '4.1', bioc: '3.14'}
           ## Check https://github.com/r-lib/actions/tree/master/examples
           ## for examples using the http-user-agent
     env:
@@ -165,11 +165,17 @@ jobs:
           ## Alternatively use https://storage.googleapis.com/bioconductor_docker/packages/
           ## though based on https://bit.ly/bioc2021-package-binaries
           ## the Azure link will be the main one going forward.
+          
+          ## temporarily set CRAN packages to obtain from https://cloud.r-project.org
+          ## required for matrixStats as needs 0.60.1, but not available 
+          ## https://github.com/dzhang32/dasper/runs/3543974439?check_suite_focus=true
+          options(repos = c(CRAN = "https://cloud.r-project.org"))
           gha_repos <- if(
               .Platform$OS.type == "unix" && Sys.info()["sysname"] != "Darwin"
           ) c(
               "AnVIL" = "https://bioconductordocker.blob.core.windows.net/packages/3.14/bioc",
-              BiocManager::repositories()
+              BiocManager::repositories(), 
+              repos = "https://cloud.r-project.org"
               ) else BiocManager::repositories()
           ## For running the checks
           message(paste('****', Sys.time(), 'installing rcmdcheck and BiocCheck ****'))
